tests/programs/errors/bare_mutable_static.flow
// Error: mutable static must be accessed with @
type Counter {
    static count:int:mut = 0
}
fn main():none {
    let x = Counter.count
}
